# Level2-Feature

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  README_EN.md  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml
docs/: architecture.md  changelog.md  dev_guide.md  feature_definitions.md  resume_project_description.md
examples/notebooks/: README.md
examples/sample_data/: l2_sample.csv  l2_sample.parquet
scripts/: demo_record.py
src/l2_features/: __init__.py  schema.py  trade_sign.py
src/l2_features/cli/: __init__.py  main.py
src/l2_features/cli/commands/: benchmark.py  compute.py  replay.py  ui.py  validate_schema.py
src/l2_features/features/: __init__.py  book.py  engine.py  flow.py  trade.py  volatility.py
src/l2_features/io/: __init__.py  adapter.py  reader.py
src/l2_features/stream/: __init__.py  state.py  updater.py
src/l2_features/ui/: __init__.py  app.py  replay_builder.py
src/l2_features/ui/viewmodels/: __init__.py  replay_viewmodel.py
src/l2_features/ui/widgets/: __init__.py  feature_plot.py
src/l2_features/ui/windows/: main_window.py
tests/: conftest.py
tests/integration/: test_batch_stream_consistency.py  test_cli_compute.py  test_cli_replay.py  test_cli_validate_schema.py
tests/perf/: test_perf_smoke.py
tests/regression/: test_feature_regression.py
tests/unit/: test_features_engine.py  test_io_adapter.py  test_replay_builder.py  test_replay_viewmodel.py  test_schema.py  test_stream_updater.py  test_trade_sign.py
